migrate to PostgreSQL and harden business rules