@@ -1,30 +1,34 @@
 package org.example.connectcg_be.service.impl;
 
+import lombok.RequiredArgsConstructor;
+import org.example.connectcg_be.cache.HobbyCache;
 import org.example.connectcg_be.dto.HobbyDTO;
 import org.example.connectcg_be.repository.HobbyRepository;
 import org.example.connectcg_be.service.HobbyService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class HobbyServiceImpl implements HobbyService {
-
-    @Autowired
-    private HobbyRepository hobbyRepository;
+    private final HobbyRepository hobbyRepository;
+    private final HobbyCache hobbyCache;
 
     @Override
     public List<HobbyDTO> getAllHobbies() {
-        return hobbyRepository.findAll().stream()
-                .map(hobby ->HobbyDTO.builder()
+        return hobbyCache.find().orElseGet(() -> {
+            List<HobbyDTO> hobbies = hobbyRepository.findAll().stream()
+                    .map(hobby -> HobbyDTO.builder()
                         .id(hobby.getId())
                         .code(hobby.getCode())
                         .name(hobby.getName())
                         .icon(hobby.getIcon())
                         .category(hobby.getCategory())
                         .build())
-                .collect(Collectors.toList());
+                    .toList();
+            hobbyCache.store(hobbies);
+            return hobbies;
+        });
     }
 }
